Bug 139258 - C++ code completion shouldn't popup if the current word exactly matches something in the list.
Summary: C++ code completion shouldn't popup if the current word exactly matches somet...
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Code completion (other bugs)
Version First Reported In: 3.3.94
Platform: Ubuntu Linux
: HI normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-12-26 22:55 UTC by Tim Hutt
Modified: 2009-01-30 20:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Hutt 2006-12-26 22:55:08 UTC
Version:           3.3.94 (using KDE KDE 3.5.5)
Installed from:    Ubuntu Packages
OS:                Linux

E.g.:

QPushButton* mybutton = new QPushButton("A button");

connect(mybutton

After you've typed that, there is no point showing a popup that just lists "
QPushButton* mybutton; local" or whatever.

It should not not show the popup if the current word matches one in the completion list. Just anticipating something: I don't think it should pop up even in this situation:

QPushButton* mybutton = new QPushButton("A button");
QPushButton* mybutton_two = new QPushButton("A button");
QPushButton* mybutton_three = new QPushButton("A button");

connect(mybutton

It should popup after some minimum number of letters (say after 'mybu') and then disappear when you get to 'mybutton' and then come back for 'mybutton_'.

That is the least annoying method in my amazing opinion!

Cheers
Comment 1 Andreas Pakulat 2006-12-30 17:07:54 UTC
I find the automatic code-completion totally annoying whatsoever. Anyway there's a similar bugreport (http://bugs.kde.org/show_bug.cgi?id=127100) in which Jens clearly states that it is important to see that the method or variable exists.
Comment 2 Jens Dagerbo 2006-12-30 18:43:48 UTC
I agree with the reporter. Completion box shouldn't automatically appear if we already match something in it. It should still be possible to manually invoke it, of course.
Comment 3 Andreas Pakulat 2008-07-06 15:36:00 UTC
still a problem in kdevelop4 :( I'm wondering wether this is actually on our side or kate's side of things?
Comment 4 David Nolden 2009-01-30 20:04:21 UTC
Implemented now within kate.