- If the completion was invoked automatically, hide when the completion text exactly matches one of the completions. - Allow showing/hiding the completion-list and the argument-hints independent of each other.

This needs some usability testing with word-completion etc., but within kdevelop it is very comfortable. You can always force the completion to be shown by using the manual completion shortcut.

BUG: 139258


svn path=/trunk/KDE/kdelibs/kate/; revision=918793